[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/client/client.gd" type="Script" id=1]
[ext_resource path="res://scenes/zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/action_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/move-icon.png" type="Texture" id=4]
[ext_resource path="res://assets/basic-attack.png" type="Texture" id=5]
[ext_resource path="res://custom_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/button_icon.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="InputEventAction" id=6]
action = "end_turn_shortcut"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=1]
action = "move_shortcut"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "basic_attack_shortcut"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="Client" type="Node"]
script = ExtResource( 1 )

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="HUDLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="EndTurnButton" type="Button" parent="HUDLayer/HUD"]
anchor_left = 0.945
anchor_top = 0.919
anchor_right = 0.98
anchor_bottom = 0.978
margin_left = -0.200073
margin_top = -0.26001
margin_right = 0.199951
margin_bottom = -0.119995
custom_styles/focus = SubResource( 5 )
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
icon = ExtResource( 7 )

[node name="ActionButtonContainer" type="HBoxContainer" parent="HUDLayer/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -52.0
margin_right = 130.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 130, 0 )
alignment = 1

[node name="MoveButton" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
size_flags_horizontal = 6
size_flags_vertical = 0
shortcut = SubResource( 2 )
hotkey = "z"
action_icon = ExtResource( 4 )

[node name="BasicAttackButton" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
margin_left = 44.0
margin_right = 84.0
size_flags_horizontal = 6
size_flags_vertical = 0
shortcut = SubResource( 4 )
hotkey = "x"
action_icon = ExtResource( 5 )

[node name="ActionButton1" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
margin_left = 88.0
margin_right = 128.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "q"

[node name="ActionButton2" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
margin_left = 132.0
margin_right = 172.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "w"

[node name="ActionButton3" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
margin_left = 176.0
margin_right = 216.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "e"

[node name="ActionButton4" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
margin_left = 220.0
margin_right = 260.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "r"

[node name="ActionButton5" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 264.0
margin_right = 304.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "t"

[node name="ActionButton6" parent="HUDLayer/HUD/ActionButtonContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 264.0
margin_right = 304.0
size_flags_horizontal = 6
size_flags_vertical = 0
hotkey = "y"

[node name="PlayerPos" type="Label" parent="HUDLayer/HUD"]
margin_right = 86.0
margin_bottom = 14.0
theme = ExtResource( 6 )
text = "player pos"

[node name="PlayerStoredPos" type="Label" parent="HUDLayer/HUD"]
margin_top = 17.0
margin_right = 92.0
margin_bottom = 31.0
theme = ExtResource( 6 )
text = "player stored pos"

[node name="Movement" type="Label" parent="HUDLayer/HUD"]
margin_top = 33.0
margin_right = 62.0
margin_bottom = 114.0
theme = ExtResource( 6 )
text = "movement"
autowrap = true

[node name="Action" type="Label" parent="HUDLayer/HUD"]
margin_left = 90.0
margin_top = 34.0
margin_right = 152.0
margin_bottom = 116.0
theme = ExtResource( 6 )
text = "action"
autowrap = true

[node name="LoadingScreen" type="ColorRect" parent="HUDLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUDLayer/LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.5
margin_top = -15.5
margin_right = 297.5
margin_bottom = 15.5
theme = ExtResource( 6 )
text = "Sky Meadow Tower Isle North-South F69420"

[node name="Zone" parent="." instance=ExtResource( 2 )]

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/MoveButton" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/BasicAttackButton" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton1" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton2" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton3" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton4" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton5" method="_on_Client_input_state_changed"]
[connection signal="input_state_changed" from="." to="HUDLayer/HUD/ActionButtonContainer/ActionButton6" method="_on_Client_input_state_changed"]
[connection signal="pressed" from="HUDLayer/HUD/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/MoveButton" to="." method="_on_ActionButton_toggled" binds= [ 0 ]]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/BasicAttackButton" to="." method="_on_ActionButton_toggled" binds= [ 1 ]]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/ActionButton1" to="." method="_on_ActionButton_toggled" binds= [ 2 ]]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/ActionButton2" to="." method="_on_ActionButton_toggled" binds= [ 3 ]]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/ActionButton3" to="." method="_on_ActionButton_toggled" binds= [ 4 ]]
[connection signal="toggled" from="HUDLayer/HUD/ActionButtonContainer/ActionButton4" to="." method="_on_ActionButton_toggled" binds= [ 5 ]]
